[package]
name = "crabfit_backend"
description = "API for Crab Fit"
license = "GPL-3.0-only"
version = "2.0.0"
edition = "2021"

[workspace]
members = ["common", "adaptors/*"]

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
common = { path = "common" }
sql-adaptor = { path = "adaptors/sql" }
dotenv = "0.15.0"
serde_json = "1.0.96"
rand = "0.8.5"
punycode = "0.4.1"
regex = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
bcrypt = "0.14.0"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tower_governor = "0.0.4"
tower = "0.4.13"
utoipa = { version = "3.3.0", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
