[package]
name = "crabfit_backend"
description = "API for Crab Fit"
license = "GPL-3.0-only"
version = "2.0.0"
edition = "2021"

[features]
sql-adaptor = []
datastore-adaptor = []

[workspace]
members = ["common", "adaptors/*"]

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
common = { path = "common" }
sql-adaptor = { path = "adaptors/sql" }
datastore-adaptor = { path = "adaptors/datastore" }
memory-adaptor = { path = "adaptors/memory" }
dotenvy = "0.15.7"
serde_json = "1.0.96"
rand = "0.8.5"
punycode = "0.4.1"
regex = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
bcrypt = "0.14.0"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tower_governor = "0.0.4"
tower = "0.4.13"
utoipa = { version = "3.3.0", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
base64 = "0.21.0"
