[package]
name = "datastore-adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
common = { path = "../../common" }
google-cloud = { git = "https://github.com/GRA0007/google-cloud-rs.git", features = ["datastore", "derive"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
